--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,10 @@ jobs:
   build-publish-docker-image:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
       - uses: actions/checkout@v2
+
+      - name: Build
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
@@ -19,6 +22,7 @@ jobs:
         - run: yarn install --frozen-lockfile
         - run: yarn tsc
         - run: yarn build
+
       - name: Log in to the Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
